# DL_model_distillation

./: .gitignore  distillation.ipynb  distillation_final.ipynb  openclip_utils.py  pyproject.toml  stl10_utils.py
jetson-inference-app/: README.md  requirements.txt
jetson-inference-app/src/: class_labels.py  inference.py  preprocess_utils.py
