[project]
name = "deeplearning"
version = "0.1.0"
description = ""
authors = [
    {name = "Dexter Corley",email = "dexter.corley@live.com"}
]
# readme = "README.md" 
requires-python = ">=3.10"
dependencies = [
    "open-clip-torch (>=2.32.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "boto3 (>=1.38.13,<2.0.0)",
    "pip (>=25.1.1,<26.0.0)",
    "jupytext (>=1.17.1,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

